--- a/mnist_tensorflow.ipynb
+++ b/mnist_tensorflow.ipynb
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "8w0zSDwNCZz8",
         "colab_type": "code",
-        "outputId": "1a06cbd9-2047-44eb-ee15-89730d1dd68f",
+        "outputId": "c0397d14-4a09-473b-df68-6b9961ddf312",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -55,7 +55,7 @@
         "print(platform.python_version())\n",
         " "
       ],
-      "execution_count": 61,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -67,7 +67,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 137
         },
         {
           "output_type": "execute_result",
@@ -79,7 +79,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 61
+          "execution_count": 137
         },
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "Dnd1f6EKChnl",
         "colab_type": "code",
-        "outputId": "5b6d38e8-6d61-44f7-e2ad-27fbb6c4e4ee",
+        "outputId": "04b4688c-b774-4a8a-a4b2-5b410939739e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -112,7 +112,7 @@
         "import keras\n",
         "print('keras: %s' % keras.__version__)"
       ],
-      "execution_count": 38,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,7 +207,7 @@
       "metadata": {
         "id": "BrS8WytMC4YS",
         "colab_type": "code",
-        "outputId": "9a168c14-b713-4b45-dad9-e9e9e825f62b",
+        "outputId": "7e932b54-5025-4c31-ad99-6552ff54ccc7",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -224,22 +224,22 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 76
+          "height": 41
         }
       },
       "source": [
         "from google.colab import files\n",
         "uploaded=files.upload()\n"
       ],
-      "execution_count": 64,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-36908f4b-ac75-4a40-9682-957e6f90d052\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-36908f4b-ac75-4a40-9682-957e6f90d052\">\n",
+              "     <input type=\"file\" id=\"files-83f7d17b-01a7-422f-b697-9e2d2b15af47\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-83f7d17b-01a7-422f-b697-9e2d2b15af47\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -252,13 +252,6 @@
           "metadata": {
             "tags": []
           }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Saving mnist_test.csv to mnist_test (2).csv\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
@@ -300,7 +293,7 @@
       "metadata": {
         "id": "AHJf3L-Hb59w",
         "colab_type": "code",
-        "outputId": "50faa55c-3c6a-45f8-ee72-d8eff77af9a7",
+        "outputId": "18f2c63f-e5ab-4b8b-aaf6-26848568c43e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 482
@@ -315,7 +308,7 @@
         "df.head()\n",
         "df.tail()"
       ],
-      "execution_count": 66,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -327,7 +320,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 143
         },
         {
           "output_type": "execute_result",
@@ -339,7 +332,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 143
         },
         {
           "output_type": "execute_result",
@@ -351,7 +344,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 143
         },
         {
           "output_type": "execute_result",
@@ -363,7 +356,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 143
         },
         {
           "output_type": "execute_result",
@@ -910,7 +903,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 143
         },
         {
           "output_type": "execute_result",
@@ -1457,7 +1450,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 143
         }
       ]
     },
@@ -1466,7 +1459,7 @@
       "metadata": {
         "id": "eN6Bv4MBcMZ0",
         "colab_type": "code",
-        "outputId": "f7a8bd3b-6b44-40c7-e37b-27e09c7acd3f",
+        "outputId": "723d507d-0e9e-4107-bedd-190722d6fac0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 378
@@ -1477,7 +1470,7 @@
         "df.describe()\n",
         "df.shape"
       ],
-      "execution_count": 67,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "stream",
@@ -2286,7 +2279,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 144
         },
         {
           "output_type": "execute_result",
@@ -2298,7 +2291,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 144
         }
       ]
     },
@@ -2317,7 +2310,7 @@
       "metadata": {
         "id": "bUtH0_w5c2vA",
         "colab_type": "code",
-        "outputId": "bd49e15d-fced-4472-f2f6-e3ce8984f740",
+        "outputId": "53657482-e17c-4136-e0e4-f0a848757319",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 629
@@ -2331,7 +2324,7 @@
         "plt.show();\n",
         "\n"
       ],
-      "execution_count": 68,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2352,7 +2345,7 @@
       "metadata": {
         "id": "5TM0-fOmc_iM",
         "colab_type": "code",
-        "outputId": "f8d58c24-8a94-44d2-d8d8-fd78dd20c468",
+        "outputId": "896daa1a-5db5-40e9-cf9d-46313a180fa1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2363,7 +2356,7 @@
         "sns.boxplot(data=df)\n",
         "plt.show();"
       ],
-      "execution_count": 69,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2434,7 +2427,7 @@
       "metadata": {
         "id": "AQ61oT4edeEr",
         "colab_type": "code",
-        "outputId": "b0c13386-b24f-4d60-8995-5dbcb1bd6f6b",
+        "outputId": "5fffa998-7b06-4f82-efe3-9cba401b3c34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -2448,7 +2441,7 @@
         "train_y.shape\n",
         "test_y.shape\n"
       ],
-      "execution_count": 72,
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2460,7 +2453,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 149
         },
         {
           "output_type": "execute_result",
@@ -2472,7 +2465,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 149
         },
         {
           "output_type": "execute_result",
@@ -2484,7 +2477,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 149
         },
         {
           "output_type": "execute_result",
@@ -2496,7 +2489,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 149
         }
       ]
     },
@@ -2633,7 +2626,7 @@
       "metadata": {
         "id": "XeIaDVHAgKc7",
         "colab_type": "code",
-        "outputId": "c84f8e67-bcc6-479a-82be-82b9a5b61aeb",
+        "outputId": "45cd59c1-158d-4d3e-a97e-fcd738405fbc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 389
@@ -2643,31 +2636,31 @@
         "# Fit the model\n",
         "model.fit(train_x,train_y, epochs=10, batch_size=32)"
       ],
-      "execution_count": 92,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "8500/8500 [==============================] - 4s 417us/step - loss: 0.4476 - acc: 0.8654\n",
+            "8500/8500 [==============================] - 4s 444us/step - loss: 0.4460 - acc: 0.8714\n",
             "Epoch 2/10\n",
-            "8500/8500 [==============================] - 2s 271us/step - loss: 0.1411 - acc: 0.9596\n",
+            "8500/8500 [==============================] - 2s 283us/step - loss: 0.1477 - acc: 0.9571\n",
             "Epoch 3/10\n",
-            "8500/8500 [==============================] - 2s 262us/step - loss: 0.0751 - acc: 0.9787\n",
+            "8500/8500 [==============================] - 2s 277us/step - loss: 0.0732 - acc: 0.9795\n",
             "Epoch 4/10\n",
-            "8500/8500 [==============================] - 2s 262us/step - loss: 0.0374 - acc: 0.9909\n",
+            "8500/8500 [==============================] - 2s 273us/step - loss: 0.0367 - acc: 0.9912\n",
             "Epoch 5/10\n",
-            "8500/8500 [==============================] - 2s 268us/step - loss: 0.0206 - acc: 0.9956\n",
+            "8500/8500 [==============================] - 3s 300us/step - loss: 0.0189 - acc: 0.9964\n",
             "Epoch 6/10\n",
-            "8500/8500 [==============================] - 2s 280us/step - loss: 0.0117 - acc: 0.9984\n",
+            "8500/8500 [==============================] - 2s 271us/step - loss: 0.0107 - acc: 0.9984\n",
             "Epoch 7/10\n",
-            "8500/8500 [==============================] - 2s 264us/step - loss: 0.0080 - acc: 0.9993\n",
+            "8500/8500 [==============================] - 2s 271us/step - loss: 0.0071 - acc: 0.9994\n",
             "Epoch 8/10\n",
-            "8500/8500 [==============================] - 2s 271us/step - loss: 0.0058 - acc: 0.9996\n",
+            "8500/8500 [==============================] - 2s 274us/step - loss: 0.0051 - acc: 0.9999\n",
             "Epoch 9/10\n",
-            "8500/8500 [==============================] - 2s 268us/step - loss: 0.0038 - acc: 1.0000\n",
+            "8500/8500 [==============================] - 2s 272us/step - loss: 0.0039 - acc: 0.9996\n",
             "Epoch 10/10\n",
-            "8500/8500 [==============================] - 2s 261us/step - loss: 0.0028 - acc: 1.0000\n"
+            "8500/8500 [==============================] - 2s 280us/step - loss: 0.0032 - acc: 0.9998\n"
           ],
           "name": "stdout"
         },
@@ -2675,13 +2668,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f9a88080a90>"
+              "<keras.callbacks.History at 0x7f9a7af7b3c8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 92
+          "execution_count": 151
         }
       ]
     },
@@ -2717,7 +2710,7 @@
       "metadata": {
         "id": "gJc0mT5cgqYD",
         "colab_type": "code",
-        "outputId": "dcb75841-da2b-45df-8ef6-2f65047553db",
+        "outputId": "da41d358-c12c-42ad-a0ba-0adae21f41e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -2728,14 +2721,14 @@
         "scores = model.evaluate(test_x, test_y)\n",
         "print(\"test model accuracy is\\n%s: %.2f%%\" % (model.metrics_names[1], scores[1]*100))"
       ],
-      "execution_count": 93,
+      "execution_count": 152,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1500/1500 [==============================] - 1s 506us/step\n",
+            "1500/1500 [==============================] - 1s 449us/step\n",
             "test model accuracy is\n",
-            "acc: 96.47%\n"
+            "acc: 96.53%\n"
           ],
           "name": "stdout"
         }
@@ -2748,7 +2741,11 @@
         "colab_type": "text"
       },
       "source": [
-        "I am getting almost 100% accuracy on training data and 96.5% accuracy on test data.Hence we can say it's a preety good model\n",
+        "I am getting almost 100% accuracy on training data and 96.53% accuracy on test data.Hence we can say it's a preety good model\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "\n",
         "---\n",
         "\n"
@@ -2759,7 +2756,7 @@
       "metadata": {
         "id": "bz7DKB-Bj5C8",
         "colab_type": "code",
-        "outputId": "ae3ec5f4-8ac5-4b87-8409-be4662d74834",
+        "outputId": "8373037c-9c32-4e67-83e9-49ef712f6d64",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 371
@@ -2773,30 +2770,30 @@
         "print ('Precision/Recall Metrics')\n",
         "print (metrics.classification_report(test_y,classes))"
       ],
-      "execution_count": 97,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "1500\n",
-            "0.9646666666666667\n",
+            "0.9653333333333334\n",
             "Precision/Recall Metrics\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       0.99      0.99      0.99       143\n",
             "           1       0.99      0.99      0.99       174\n",
-            "           2       0.95      0.98      0.96       169\n",
-            "           3       0.99      0.92      0.95       155\n",
-            "           4       0.96      0.96      0.96       170\n",
-            "           5       0.95      0.96      0.95       127\n",
-            "           6       0.96      0.99      0.98       133\n",
-            "           7       0.97      0.95      0.96       176\n",
-            "           8       0.93      0.95      0.94       110\n",
-            "           9       0.94      0.94      0.94       143\n",
+            "           2       0.94      0.99      0.97       169\n",
+            "           3       0.97      0.90      0.94       155\n",
+            "           4       0.97      0.96      0.97       170\n",
+            "           5       0.92      0.97      0.94       127\n",
+            "           6       0.96      0.99      0.97       133\n",
+            "           7       0.99      0.95      0.97       176\n",
+            "           8       0.96      0.95      0.95       110\n",
+            "           9       0.96      0.94      0.95       143\n",
             "\n",
-            "    accuracy                           0.96      1500\n",
+            "    accuracy                           0.97      1500\n",
             "   macro avg       0.96      0.96      0.96      1500\n",
-            "weighted avg       0.96      0.96      0.96      1500\n",
+            "weighted avg       0.97      0.97      0.97      1500\n",
             "\n"
           ],
           "name": "stdout"
@@ -2833,7 +2830,7 @@
       "metadata": {
         "id": "Wp4oJT5blBL2",
         "colab_type": "code",
-        "outputId": "87fe9ebb-02ed-4936-c21b-834a80b1af91",
+        "outputId": "8aaab470-e2f5-4890-bb96-d3d7542923c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
@@ -2845,19 +2842,19 @@
         "plt.imshow(transfered_row)\n",
         "plt.show()"
       ],
-      "execution_count": 96,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f9a87b58eb8>"
+              "<matplotlib.image.AxesImage at 0x7f9a8606d470>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 96
+          "execution_count": 155
         },
         {
           "output_type": "display_data",
