--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -21,9 +21,7 @@
     "colab": {
       "name": "SentimentAnalysis.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "XzSE_Hlq1Zyz"
-      ],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "accelerator": "GPU"
@@ -40,11 +38,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G0bOv6nR4FFY",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Here I am working on tweet_sent dataset where sentiment(category) for tweets(text) are pre-defined.I will start from unsupervised(using Textblob and Lexicon based)models & then I will build some Supervised Machine leaning models(classifiers) to comapre the results."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "LGfE98z8OZju",
         "colab_type": "code",
-        "outputId": "c5199ab5-67c8-4370-ddac-73a1ce3bda94",
+        "outputId": "0ef0c91d-0f10-4130-876d-45d1551fe11f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 123
@@ -472,6 +480,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zb8bbzuc7jC_",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Plot the data for visualization"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "q9Fd4jQBDrbE",
@@ -546,6 +564,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DGEbgVu38N4C",
+        "colab_type": "text"
+      },
+      "source": [
+        "## From Pie-chart I understand that 48% tweets are positive,36% are neutral while only 16% are negative."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "O0KHkFOiML4t",
@@ -585,6 +613,29 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "atewWFzQ9LSm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "To get the exact figure I need to "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RDRrWIdy9PVn",
+        "colab_type": "text"
+      },
+      "source": [
+        "## With the help of bar chart I can show the exact numbers of different categories of sentiments .\n"
       ]
     },
     {
@@ -749,6 +800,29 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TZItGP7t-ICT",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Here I have generated the word cloud for different class of sentiments."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "os-PR9Em-Ddl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -13806,6 +13880,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-tiI8tmR39Rm",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
