--- a/L&T_loan_defaulter.ipynb
+++ b/L&T_loan_defaulter.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###  Objective:To accurately predict the probability of loanee/borrower defaulting on a vehicle loan in the first EMI (Equated Monthly Instalments) on the due date.  Doing so will ensure that clients capable of repayment are not rejected and important determinants can be identified which can be further used for minimising the default rates."
+        "###  Objective:To accurately predict the probability of loanee/borrower defaulting on a vehicle loan ."
       ]
     },
     {
@@ -699,6 +699,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vhqDAea0zes3",
+        "colab_type": "text"
+      },
+      "source": [
+        "### There are missing values in Employment Type.We can neither impute nor ignore this much values,so we will create another category of employment type named as \"others\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zYn6JUlJirAT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Substituting the null values by third category 'others'\n",
+        "df.fillna('others', inplace=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ou4OwbUt0VKv",
+        "colab_type": "text"
+      },
+      "source": [
+        "### drop some variables which are not going to help in analysis like id's & dates."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "j4rOyazqid9z",
@@ -711,6 +745,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UEhj8jze7zeQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "### PERFORM_CNS.SCORE has 567 distinct values ranging from -1 to 890 with mean value 288.for sake of easy calculation we are replacing all values <300 with -1(minimum value)"
+      ]
     },
     {
       "cell_type": "code",
@@ -726,18 +770,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "zYn6JUlJirAT",
-        "colab_type": "code",
-        "colab": {}
+        "id": "vXMbhrUq-LHw",
+        "colab_type": "text"
       },
       "source": [
-        "# Substituting the null values by third category 'others'\n",
-        "df.fillna('others', inplace=True)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "### There are some categorical variables which need to be dummy coded for analysis"
+      ]
     },
     {
       "cell_type": "code",
@@ -1030,6 +1070,21 @@
           "execution_count": 11
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XYv-roi84MEC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#understand the class distribution\n",
+        "print(data['loan_default'].value_counts())\n",
+        "sns.countplot(x=\"loan_default\", data=data) "
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -10477,6 +10532,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "buZvkNFq40-p",
+        "colab_type": "text"
+      },
+      "source": [
+        "### From EDA we got to know  there are 33  variables(after dropping some variables which are not useful in analysis) &\t233154 observations.\n",
+        "\n",
+        "1.   PRI.CURRENT.BALANCE,PRIMARY.INSTAL.AMT & PRI.SANCTIONED.AMOUNT are highly skewed \n",
+        "2.   SEC.NO.OF.ACCTS,SEC.ACTIVE.ACCTS ,SEC.INSTAL.AMT,SEC.CURRENT.BALANCE are highly skewed \n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "sQo4wty_jawO",
@@ -10864,6 +10933,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gvM_GoilAcal",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Create features and labels for model building"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ODOAgrZVj3rG",
@@ -11152,6 +11231,16 @@
           },
           "execution_count": 15
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VSmGiS7RA48J",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Scaling is required here to bring the data at equivalent/same range."
       ]
     },
     {
@@ -11790,6 +11879,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KoTWJMpPBUQJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Splitting the data into the training and test datasets to evaluate the model."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "k8nbKEKgkT50",
@@ -11861,6 +11960,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tNmLP5nWBqEt",
+        "colab_type": "text"
+      },
+      "source": [
+        "## importing some more libraries to present classification accuracy."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ylKjIH1mGL4B",
@@ -11876,6 +11985,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XYwahP7yB7Qf",
+        "colab_type": "text"
+      },
+      "source": [
+        "# logistic regression model(classification model)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "--q5LN0YkeDW",
@@ -11889,6 +12008,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PblfgmJ3CO3l",
+        "colab_type": "text"
+      },
+      "source": [
+        "### fitting the model on training data"
+      ]
     },
     {
       "cell_type": "code",
@@ -11931,6 +12060,16 @@
           },
           "execution_count": 20
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cV_EkYoUCdz_",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Evaluating the model with test data"
       ]
     },
     {
@@ -12003,6 +12142,18 @@
           ],
           "name": "stderr"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "m-m1KqNtC0Nu",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Accuracy,precision & recall all are good for '0'(non-defaulter) but for '1' precision & recall  both are 0 which is not desirable for a good model.   \n",
+        "*this problem arises because of imbalance datset as we have very less samples for '1'(defaulter).\n",
+        "we need to use over_sampling algorithm here to increase this sample type.\"SMOTE\" is widely used  for this purpose although we have some other methods also."
       ]
     },
     {
@@ -13062,6 +13213,64 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B0FBlW4ky-Gk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(\"confusion Matrix\")\n",
+        "cf= metrics.confusion_matrix(test_y,classes)\n",
+        "lbl1 =[\"Predicted0\",\"Predicted1\"]\n",
+        "lbl2 = [\"True0\",\"True1\"]\n",
+        "sns.heatmap(cf, annot = True, cmap = \"YlGnBu\",fmt = 'd', xticklabels = lbl1,yticklabels =lbl2, linewidths= 1)\n",
+        "plt.show();"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "grxBgpqzyyBv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Drawing ROC Chart\n",
+        "fpr,tpr, th= roc_curve(test_y,classes)\n",
+        "roc_auc = metrics.auc(fpr,tpr)\n",
+        "plt.title(\"ROC CHART\")\n",
+        "plt.plot(fpr,tpr,'b',label = 'AUC= %0.3f' % roc_auc)\n",
+        "plt.legend(loc = 'top right')\n",
+        "plt.plot([0,1],[0,1], 'o--') #drawing dotted line between [0,0] to [1,1]\n",
+        "plt.xlim([0,1])\n",
+        "plt.ylim([0,1])\n",
+        "plt.ylabel('True Positive Rate')\n",
+        "plt.xlabel('False Positive Rate')\n",
+        "plt.show();"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CsY9yBpXzI5X",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import graphviz\n",
+        "dot_data = tree.export_graphviz(dt, out_file = None, feature_names = X.columns, class_names = [\"Non-Defaulter\",\"Defaulter\"], filled = True, rounded = True, special_characters = True)\n",
+        "graph = graphviz.Source(dot_data)\n",
+        "graph"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
