--- a/Decision_Tree_Iris_dataset.ipynb
+++ b/Decision_Tree_Iris_dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Decision Tree_Iris dataset.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOVdRsisd+FZQ2cgzD4aEi8",
+      "authorship_tag": "ABX9TyMaix3qjoHl3t6XzCGPZT3m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2639,6 +2639,28 @@
         "\n",
         "\n",
         "print(Confusion Matrix(predict_test,test_y))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W8KElxaTdIvd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "arr=[5,1,2,3,4,5,1]\n",
+        "i=0\n",
+        "for k in arr:\n",
+        "        i=i+1\n",
+        "if arr[i]==k:\n",
+        "            print(\"yes\")\n",
+        "else:\n",
+        "        print(\"no\")   \n",
+        "   "
       ],
       "execution_count": 0,
       "outputs": []
